testing/error/misnamed.inp
* B B?TA ? II III AAAA
Hello world